# local_planner_benchmarking

./: README.md
benchmarking/: CMakeLists.txt  README.md  package.xml
benchmarking/data/DWB/: ee_path_moving_smoothness.xlsx  ee_path_smoothness.xlsx  ee_path_smoothness_dynamic.xlsx  other_metrics.xlsx  other_metrics_dynamic.xlsx  other_moving_metrics.xlsx  path_moving_smoothness.xlsx  path_smoothness.xlsx  path_smoothness_dynamic.xlsx
benchmarking/data/DWB/complex_maze/: benchmarking_ee_path_complex_maze.xlsx  benchmarking_other_complex_maze.xlsx  benchmarking_paths_complex_maze.xlsx
benchmarking/data/DWB/new_maze/: benchmarking_ee_path_new_maze.xlsx  benchmarking_other_new_maze.xlsx  benchmarking_paths_new_maze.xlsx
benchmarking/data/DWB/office/: benchmarking_ee_path_office.xlsx  benchmarking_ee_path_office_dynamic.xlsx  benchmarking_moved_ee_path_office.xlsx  benchmarking_moved_joints_office.xlsx  benchmarking_moved_other_office.xlsx  benchmarking_moved_paths_office.xlsx  benchmarking_other_office.xlsx  benchmarking_paths_office.xlsx  benchmarking_paths_office_dynamic.xlsx
benchmarking/data/DWB/old_maze/: benchmarking_ee_path_old_maze.xlsx  benchmarking_other_old_maze.xlsx  benchmarking_paths_old_maze.xlsx
benchmarking/data/DWB/playground/: benchmarking_ee_path_playground.xlsx  benchmarking_ee_path_playground_dynamic.xlsx  benchmarking_ee_path_playground_dynamic_v2.xlsx  benchmarking_other_playground.xlsx  benchmarking_other_playground_dynamic.xlsx  benchmarking_other_playground_dynamic_v2.xlsx  benchmarking_paths_playground.xlsx  benchmarking_paths_playground_dynamic.xlsx  benchmarking_paths_playground_dynamic_v2.xlsx
benchmarking/data/DWB/warehouse/: benchmarking_ee_path_warehouse.xlsx  benchmarking_other_warehouse.xlsx  benchmarking_paths_warehouse.xlsx
benchmarking/data/TEB/: ee_path_moving_smoothness.xlsx  ee_path_smoothness.xlsx  ee_path_smoothness_dynamic.xlsx  other_metrics.xlsx  other_metrics_dynamic.xlsx  other_moving_metrics.xlsx  path_moving_smoothness.xlsx  path_smoothness.xlsx  path_smoothness_dynamic.xlsx
benchmarking/data/TEB/complex_maze/: benchmarking_ee_path_complex_maze.xlsx  benchmarking_other_complex_maze.xlsx  benchmarking_paths_complex_maze.xlsx
benchmarking/data/TEB/new_maze/: benchmarking_ee_path_new_maze.xlsx  benchmarking_other_new_maze.xlsx  benchmarking_paths_new_maze.xlsx
benchmarking/data/TEB/office/: benchmarking_ee_path_office.xlsx  benchmarking_moved_ee_path_office.xlsx  benchmarking_moved_joints_office.xlsx  benchmarking_moved_other_office.xlsx  benchmarking_moved_paths_office.xlsx  benchmarking_other_office.xlsx  benchmarking_paths_office.xlsx
benchmarking/data/TEB/playground/: benchmarking_ee_path_playground.xlsx  benchmarking_ee_path_playground_dynamic.xlsx  benchmarking_ee_path_playground_dynamic_v2.xlsx  benchmarking_moved_paths_playground.xlsx  benchmarking_other_playground.xlsx  benchmarking_other_playground_dynamic.xlsx  benchmarking_other_playground_dynamic_v2.xlsx  benchmarking_paths_playground.xlsx  benchmarking_paths_playground_dynamic.xlsx  benchmarking_paths_playground_dynamic_v2.xlsx
benchmarking/data/TEB/warehouse/: benchmarking_ee_path_warehouse.xlsx  benchmarking_ee_path_warehouse_dynamic.xlsx  benchmarking_other_warehouse.xlsx  benchmarking_other_warehouse_dynamic.xlsx  benchmarking_paths_warehouse.xlsx  benchmarking_paths_warehouse_dynamic.xlsx
benchmarking/launch/: common_benchmarking.launch  complex_maze_benchmark.launch  new_maze_benchmark.launch  office_benchmark.launch  old_maze_benchmark.launch  playground_benchmark.launch  tricky_maze_benchmark.launch  warehouse_benchmark.launch
benchmarking/msg/: JointStates.msg  travelInfo.msg
benchmarking/src/: UR_FK_calculator.py  analyse_ee_arm_moving.py  analyze_ee_stability.py  analyze_other.py  analyze_path_smoothness.py  combine_error_plots.py  compare_paths.py  ee_smoothness_dynamic.py  ee_stability_metric.py  local_path_metric.py  navigation_status.py  navigation_test_publisher.py  navigation_test_reset.py  navigation_testing.py  plot_paths.py  pose_from_joint_angle.py  start_trial.py
benchmarking/worlds/complex_maze/: complex_maze.sdf  complex_maze.world  model.config
benchmarking/worlds/empty_world/: empty_world.world  model.config  model.sdf
benchmarking/worlds/mazes/new_maze/: maze.world  model.config  model.sdf
benchmarking/worlds/mazes/old_maze/: model.config  model.sdf  old_maze.world
benchmarking/worlds/office/: office.world
benchmarking/worlds/playground/: model.config  model.sdf  playground.world
benchmarking/worlds/tricky_maze/: model.config  tricky_maze.sdf  tricky_maze.world
bh282_hand/: CMakeLists.txt  package.xml
mir100_mobile_base/: CMakeLists.txt  package.xml
mir_navigation/: package.xml
mir_navigation/map/: maze.yaml  (+9 more)
mobile_manipulator/: CMakeLists.txt  package.xml
mobile_manipulator/cfg/: dora_calibration.yaml  dora_rtde_input_recipe.txt
mobile_manipulator/cfg/controller/: joint_state_controller.yaml
mobile_manipulator/launch/: coppeliaSim_dora_control.launch  dora_simulation_demo.launch  dora_simulation_warehouse_demo.launch
mobile_manipulator/launch/includes/: no_roof_small_warehouse.launch  powerdrill.launch  spawn_maze.launch.xml
mobile_manipulator/models/beer/: model.sdf  model_moved.sdf  model_warehouse.sdf
mobile_manipulator/models/cordless_drill/: model.sdf
mobile_manipulator/models/dynamic_obstacle/: model.sdf
mobile_manipulator/models/kinect/: model.sdf  model_moved.sdf  model_warehouse.sdf
mobile_manipulator/models/table/: model.config  model.sdf  model_moved.sdf  model_warehouse.sdf
mobile_manipulator/src/: move_group_python.py  navigation_goal.py
mobile_manipulator/urdf/: common_properties.urdf.xacro  dora.urdf  dora.xacro
realistic_dora_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_arm/: CMakeLists.txt  package.xml
(+63 files in other folders)
