<?xml version="1.0"?>
<package format="2">
  <name>mobile_manipulator</name>
  <version>0.0.0</version>
  <description>The mobile_manipulator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hadi@todo.todo">hadi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/mobile_manipulator</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bh282_hand</build_depend>
  <build_depend>mir100_mobile_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ur10_arm</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>message_generation</build_depend>
  
  <depend>moveit</depend>
  <depend>rgbd_launch</depend>
  <depend>gazebo_ros</depend> 
  <build_export_depend>bh282_hand</build_export_depend>
  <build_export_depend>mir100_mobile_base</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>ur10_arm</build_export_depend>
  <exec_depend>bh282_hand</exec_depend>
  <exec_depend>mir100_mobile_base</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>ur10_arm</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>ira_laser_tools</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- <exec_depend>ros-noetic-rgbd-launch</exec_depend> -->
  <!-- <exec_depend>ros-noetic-openni2-camera</exec_depend> -->
  <!-- <exec_depend>ros-noetic-openni2-launch</exec_depend> -->



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- <depend>gazebo_ros</depend> needed for these: -->
      <gazebo_ros gazebo_model_path="${prefix}/models"/>
      <gazebo_ros gazebo_model_path="${prefix}/worlds/warehouse/models"/>
      <gazebo_ros gazebo_media_path="${prefix}/worlds/mazes"/>
      <gazebo_ros gazebo_media_path="${prefix}/worlds/maze"/>
  </export>
</package>
